# solana-geyser-plugin-scaffold

./: Cargo.toml  README.md  geyser-plugin.json
src/: entrypoint.rs  geyser_plugin.rs  lib.rs  structured_logger.rs  thread_safe_logger.rs
