[package]
name = "solana-geyser-plugin-scaffold"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agave-geyser-plugin-interface = "3.0.0"
bs58 = "0.5.1"
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
solana-account-decoder = "3.0.0"
solana-logger = "3.0.0"
